--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mcube",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://SaaS-21T2-group3.github.io/mcube",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@reduxjs/toolkit": "^1.5.0",
@@ -24,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
   },
   "eslintConfig": {
     "extends": [
