--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,7 @@
     "arrow-body-style": [2, "as-needed"],
     "lines-between-class-members": ["error", "always"],
     "comma-dangle": [2, "always-multiline"],
-    "no-confusing-arrow": 1,
+    // "no-confusing-arrow": 1,
     "no-console": "warn",
     "no-use-before-define": 1,
     "prefer-template": 2
