--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "typescript": "^4.3.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -47,5 +48,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^5.2.6",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.0",
+    "style-loader": "^3.0.0"
   }
 }
