--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_ENV = local
-REACT_APP_HOST_URL = https://reqres.in/api/
+REACT_APP_HOST_URL = https://mockend.com/SaaS-21T2-group3/mcube/tree/mockend/
+REACT_APP_FEED_URL = https://mockend.com/SaaS-21T2-group3/mcube/tree/mockend/
