--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_ENV = local
-REACT_APP_HOST_URL = http://localhost:8080/v1/
+REACT_APP_HOST_URL = https://mcube-saas.herokuapp.com/v1/
 REACT_APP_FEED_URL = https://mockend.com/SaaS-21T2-group3/mcube/tree/mockend/
