--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mcube",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://SaaS-21T2-group3.github.io/mcube",
+  "homepage": "https://bitbinary.github.io/my-mcube",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@reduxjs/toolkit": "^1.5.0",
